Remove deprecated java setting
java:latest is 1.8, which has no perm gen